================================================================================
Change history for glaciers
================================================================================

HIGHEST PRIORITY:
- loading full-size background image causes OutOfMemoryException, exceeds JVM heap space
- valley model for x<0 that matches background image

HIGH PRIORITY:
- add yaw to fake 3D perspective (headwall, terminus, ELA, ripples) 

MEDIUM PRIORITY:
- tweak alignment of mountains image, perspective (or image?) is a little off at headwall
- switch user-interface between English and metric units
- provide time estimate for climate experiments interface
- Experiments module
- behavior of budget meter (snap-to-ice) is hard to discover and potentially misleading
- main control panel should be the same height in all modules
? add headwallX to new ice thickness model in model.txt, which assumes headwallX=0
- "steady state" feature needs to advance clock to the time at which the glacier would reach its steady state
- "steady state" feature needs to fill in missing data in time-dependent graphs
- "steady state" feature needs to fill glacier with debris and surface ripples (and create moraine?)
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- implement Save/Load feature
- improve performance on slower machines?
- make sure everything works properly when clock is paused

LOW PRIORITY:
- move steady state button to play area?
- more "cartoonish" view for Basic panel?
- right edge of ice thickness tool icon is clipped (see Unfuddle #558)
- remove registration points from mountains image
- creating a tool and dragging it straight to the trash doesn't work because we're in the middle of an event sequence