@@ -5,9 +5,9 @@ Change history for glaciers
 HIGHEST PRIORITY:
 - loading full-size background image causes OutOfMemoryException, exceeds JVM heap space
 - valley model for x<0 that matches background image
+- valley is narrower near headwall in background image
 
 HIGH PRIORITY:
-- add yaw to fake 3D perspective (headwall, terminus, ELA, ripples) 
 
 MEDIUM PRIORITY:
 - tweak alignment of mountains image, perspective (or image?) is a little off at headwall
@@ -74,6 +74,8 @@ CLEANUP:
 
 
 DONE:
+7/23/08 - add yaw to fake 3D perspective for ice, debris, ELA, ripples (see YAW_ROTATION, YAW_X_OFFSET)
+7/23/08 - rename PERSPECTIVE_HEIGHT to PITCH_Y_OFFSET
 7/23/08 - move PERSPECTIVE_HEIGHT constant from Valley to GlaciersConstants
 ******* 0.00.37 (23428)
 7/23/08 - turn off "snap tools to headwall", so that tools behave the same on both sides of the headwall
